@@ -5,6 +5,8 @@ bochs (2.4.6-5) UNRELEASED; urgency=low
   * Add missing backslash to escape $ on XPM_LIB variable:
     - debian/patches/link-only-needed-libs.patch
   * Enable support for RFB protocol as GUI frontend (works with VNC viewer).
+  * Use dpkg-buildflags to set build flags (enables default hardening flags).
+    Based on a patch by Moritz Muehlenhoff <jmm@debian.org>. (Closes: #653511)
 
  -- Guillem Jover <guillem@debian.org>  Thu, 29 Dec 2011 21:49:06 +0100
 
